<resources>
    <string name="app_name">CryptoPare</string>

    <string name="price_usd">00.00</string>
    <string name="price">%s %s</string>
    <string name="currency_usd">$</string>
    <string name="oneHour">1H</string>
    <string name="twentyFourHour">1D</string>
    <string name="sevenDays">7D</string>
    <string name="percent_change">%s%%</string>
    <string name="title_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_about">About</string>
    <string name="rank">Rank</string>
    <string name="price_title">Price</string>
    <string name="last_updated">Last updated</string>
    <string name="rank_value">%s</string>
    <string name="coin_icon_description">Coin icon</string>
    <string name="action_currency">Currency</string>
    <string name="action_refresh">Refresh</string>
    <string name="name">Name</string>
    <string name="symbol">Symbol</string>
    <string name="market_cap">Market Cap</string>
    <string name="available_supply">Available Supply</string>
    <string name="volume_24h">Volume (24H)</string>
    <string name="max_supply">Max Supply</string>
    <string name="percent_change_1h">Percent Change (1H)</string>
    <string name="percent_change_24h">Percent Change (24H)</string>
    <string name="percent_change_7d">Percent Change (7D)</string>
    <string name="total_supply">Total Supply</string>
    <string name="price_btc_title">Price BTC</string>

    <string name="pref_appearance">Appearance</string>
    <string name="pref_night_mode_title">Night mode</string>
    <string name="pref_night_mode_dialog_title">Night mode</string>
    <string name="pref_general">General</string>
    <string name="pref_currency">Currency</string>

    <string name="version">Version %s</string>
    <string name="description">Information retrieved from <u>CoinCap API 2.0</u></string>
    <string name="disclaimer">The information provided on this app does not constitute investment advice, financial advice, trading advice, or any other sort of advice and you should not treat any of the app\'s content as such.\n\We do not hold any responsibility for any missing or wrong information. This app provides all information as is. You understand that you are using any and all information available here at your own risk.</string>
    <string name="about_help">Help</string>
    <string name="about_send_feedback">Send feedback</string>
    <string name="about_legal">Legal</string>
    <string name="about_licenses">Licenses</string>
    <string name="about_lib_intro">This app uses the following open source libraries.</string>
    <string name="feedback_subject">CoinCap feedback</string>
    <string name="feedback_chooser_title">Send email…</string>
    <string name="author_name">Indrit Bashkimi</string>
    <string name="author_email">Indrit Bashkimi &lt;bashkimidev@gmail.com&gt;</string>
    <string name="open_source_description">This app is open source and is licensed under Apache 2.0.</string>
    <string name="source_code_title"><u>Source code</u></string>
    <string name="source_code_url" translatable="false">https://github.com/indritbashkimi/CryptoPare</string>
    <string name="search">Search</string>
    <string name="search_hint">Search coins</string>
    <string name="page_all">All</string>
    <string name="page_favorite">Favorite</string>
    <string name="average_price_24h">Average price (24H)</string>
    <string name="chart_all">All</string>
    <string name="chart_day">24H</string>
    <string name="chart_2_days">48H</string>
    <string name="chart_week">7D</string>
    <string name="chart_2_weeks">14D</string>
    <string name="chart_3_weeks">21D</string>
    <string name="chart_month">1M</string>
    <string name="chart_2_months">2M</string>
    <string name="chart_3_months">3M</string>
    <string name="chart_6_months">6M</string>
    <string name="chart_year">1Y</string>
    <string name="chart_2_years">2Y</string>
    <string name="currency">%s %s</string>
    <string name="select_currency">Select currency</string>
    <string name="currencies_load_error">Something went wrong. Try again.</string>
    <string name="title_licenses">Licenses</string>
    <string name="title_market">Market</string>

</resources>
