<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.PreferenceCategory android:title="@string/pref_appearance">

        <ListPreference
            android:defaultValue="daynight"
            android:dialogTitle="@string/pref_night_mode_dialog_title"
            android:entries="@array/settings_theme_human_value"
            android:entryValues="@array/settings_theme_phone_value"
            android:key="night_mode"
            android:summary="%s"
            android:title="@string/pref_night_mode_title" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/pref_general">

        <Preference
            android:defaultValue="united-states-dollar"
            android:key="currency"
            android:summary="%s"
            android:title="@string/pref_currency" />

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>