<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_navigation"
    app:startDestination="@id/market">

    <fragment
        android:id="@+id/market"
        android:name="com.ibashkimi.cryptomarket.coinlist.MarketFragment"
        android:label="@string/app_name"
        app:layout="@layout/fragment_market"/>

    <fragment
        android:id="@+id/favorite"
        android:name="com.ibashkimi.cryptomarket.favorites.FavoriteFragment"
        android:label="@string/page_favorite"
        app:layout="@layout/fragment_favorite"/>

    <fragment
        android:id="@+id/search"
        android:name="com.ibashkimi.cryptomarket.search.SearchFragment"
        android:label="@string/search"
        app:layout="@layout/fragment_search"/>
</navigation>