<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        style="?toolbarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="exitUntilCollapsed" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/price_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
                    app:layout_scrollFlags="scroll|enterAlways"
                    tools:text="$1000" />

                <TextView
                    android:id="@+id/change_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    app:layout_scrollFlags="scroll|enterAlways"
                    tools:text="$1000" />

                <include layout="@layout/chart" />

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:columnCount="2"
                    android:useDefaultMargins="true">

                    <TextView
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:text="@string/rank"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1" />

                    <TextView
                        android:id="@+id/rank"
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                        tools:text="#1" />

                    <TextView
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:text="@string/name"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1" />

                    <TextView
                        android:id="@+id/name"
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                        tools:text="#1" />

                    <TextView
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:text="@string/symbol"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1" />

                    <TextView
                        android:id="@+id/symbol"
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                        tools:text="#1" />

                    <TextView
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:text="@string/price_title"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1" />

                    <TextView
                        android:id="@+id/price"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                        tools:text="$1000" />

                    <TextView
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:text="@string/average_price_24h"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1" />

                    <TextView
                        android:id="@+id/average_price_24h"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                        tools:text="$1000" />

                    <TextView
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:text="@string/percent_change_1h"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/percent_change_1h"
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                        android:visibility="gone"
                        tools:text="#1" />

                    <TextView
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:text="@string/percent_change_24h"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1" />

                    <TextView
                        android:id="@+id/percent_change_24h"
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                        tools:text="#1" />

                    <TextView
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:text="@string/percent_change_7d"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/percent_change_7d"
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                        android:visibility="gone"
                        tools:text="#1" />

                    <TextView
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:text="@string/available_supply"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1" />

                    <TextView
                        android:id="@+id/available_supply"
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                        tools:text="#1" />

                    <TextView
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:text="@string/max_supply"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1" />

                    <TextView
                        android:id="@+id/max_supply"
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                        tools:text="#1" />

                    <TextView
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:text="@string/market_cap"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1" />

                    <TextView
                        android:id="@+id/marketCap"
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                        tools:text="#1" />

                    <TextView
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:text="@string/volume_24h"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1" />

                    <TextView
                        android:id="@+id/volume_24h"
                        android:layout_columnWeight="1"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                        tools:text="#1" />

                    <TextView
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:text="@string/last_updated"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1" />

                    <TextView
                        android:id="@+id/lastUpdated"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                        tools:text="$1000" />

                </GridLayout>

            </LinearLayout>

        </ScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_favorite_border"
        android:visibility="invisible"
        tools:visibility="visible" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
