<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:columnCount="2"
            android:useDefaultMargins="true">

            <TextView
                android:layout_columnWeight="1"
                android:layout_gravity="end"
                android:gravity="end"
                android:text="@string/rank"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/rank"
                android:layout_columnWeight="1"
                android:layout_gravity="start"
                android:gravity="start"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                tools:text="#1" />

            <TextView
                android:layout_gravity="end"
                android:gravity="end"
                android:text="@string/price_title"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/price"
                android:layout_gravity="start"
                android:gravity="start"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                tools:text="$1000" />

            <TextView
                android:layout_gravity="end"
                android:gravity="end"
                android:text="@string/last_updated"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/lastUpdated"
                android:layout_gravity="start"
                android:gravity="start"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                tools:text="$1000" />

        </GridLayout>

    </android.support.v4.widget.SwipeRefreshLayout>

</android.support.design.widget.CoordinatorLayout>
