<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/app_bar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="16dp">

            <TextView
                android:id="@+id/about_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAppearance="?textAppearanceHeadline5" />

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?textAppearanceSubtitle1"
                tools:text="Version 0.1" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textAppearance="?textAppearanceSubtitle1"
                tools:text="This a description for this awesome app" />

            <TextView
                android:id="@+id/disclaimer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:textAppearance="?textAppearanceCaption"
                tools:text="This a description for this awesome app" />

            <TextView
                android:id="@+id/open_source_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:text="@string/open_source_description"
                android:textAppearance="?textAppearanceSubtitle1"
                android:visibility="visible" />

            <TextView
                android:id="@+id/source_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:text="@string/source_code_title"
                android:textAppearance="?textAppearanceSubtitle1" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/prefs"
                android:name="com.ibashkimi.cryptomarket.about.AboutFragment$AboutFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>